RESOLVED FIXED106931
Table layout does not need to explicitly call computePreferredLogicalWidths
https://bugs.webkit.org/show_bug.cgi?id=106931
Summary Table layout does not need to explicitly call computePreferredLogicalWidths
Ojan Vafai
Reported 2013-01-15 11:32:06 PST
Table layout does not need to explicitly call computePreferredLogicalWidths
Attachments
Patch (7.56 KB, patch)
2013-01-15 11:35 PST, Ojan Vafai
no flags
Patch for landing (8.23 KB, patch)
2013-01-17 12:18 PST, Ojan Vafai
no flags
Ojan Vafai
Comment 1 2013-01-15 11:35:46 PST
Julien Chaffraix
Comment 2 2013-01-16 14:53:58 PST
Comment on attachment 182816 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=182816&action=review > Source/WebCore/ChangeLog:28 > + * rendering/RenderTableCol.cpp: > + (WebCore::RenderTableCol::clearPreferredLogicalWidthsDirtyBits): > + * rendering/RenderTableCol.h: We should probably explain why this code is needed: columns (col) don't have the concept of preferred logical width but they rely on propagating the preferred logical widths bit up to the containing table if their style change.
Ojan Vafai
Comment 3 2013-01-17 12:18:51 PST
Created attachment 183242 [details] Patch for landing
WebKit Review Bot
Comment 4 2013-01-17 14:42:40 PST
Comment on attachment 183242 [details] Patch for landing Clearing flags on attachment: 183242 Committed r140047: <http://trac.webkit.org/changeset/140047>
WebKit Review Bot
Comment 5 2013-01-17 14:42:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.